# oRGB

./: README.md
0rgb/: .gitignore  CMakeLists.txt  config_file  spaceConvertPlan1.drawio  sppaceConvertPlan.drawio
0rgb/doc/html/: annotated.html  classConvertTooRGB-members.html  classConvertTooRGB.html  classInverse-members.html  classInverse.html  classes.html  colorspaceadjustment_8hpp_source.html  dir_b495030b316bc5b388b2691fcd3d5b17.html  dir_fa618a291dbd797ca88dccde7e7e4c88.html  files.html  functions.html  functions_func.html  index.html  inversecolorpsaceadjustement_8hpp_source.html
0rgb/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
0rgb/doc/latex/: annotated.tex  classConvertTooRGB.tex  classInverse.tex  refman.tex
0rgb/example_2/: CMakeLists.txt
0rgb/example_2/include/: colorspaceadjustment.hpp  inversecolorpsaceadjustement.hpp
0rgb/example_2/src/: colorspaceadjustment.cpp  inversecolorpsaceadjustement.cpp  main.cpp  trackbar.cpp
0rgb/example_2/test/: CMakeLists.txt  colorspacetest.cpp  colorspacetest.hpp  opencv_wrapper_test.cpp  opencv_wrapper_test.hpp
